Bug 223158 Crash searching from partially loaded bugzilla query with magnifier running [@ nsDocAccessible::HandleMutationEvent] r=caillon sr=bz